2001-07-11  John Kirkland  <jpk@bl.org>
	* Fixed a bug whereby resetting click counts was timing out for
	  large albums.  Reported by Ed.

	* Added public picture commenting feature. SF #404094
	  Specifics:
	  a.  Album owners can toggle it on/off per album
	  b.  Anyone can post a new comment if it is toggled on.
	  c.  People that can write to an album can delete individual comments.
	  d.  Comments consist of Name, Date, IPNumber, and Text.
	  e.  An '*' appears next to the captions of any photo with
	      comments.

	* Fixed minor bug in layout/searchdraw.inc


2001-07-10  John Kirkland  <jpk@bl.org>

	* Added a "keywords" feature.  When you edit captions, you now
	  have the ability to enter photo keywords that the search engine
	  will use when searching for images.


2001-07-10  Bharat Mediratta  <bharat@menalto.com>

	* Turned off magic_quotes_runtime in the config wizard so that you
	  can configure Gallery on servers that have it turned on.

2001-07-09  John Kirkland <jpk@bl.org>

	* Photo caption setting now works for URLs.  This is
	  feature #425987 from sf.

2001-07-08  John Kirkland <jpk@bl.org>

	* Photo captions now automagically get set from the original
	  filenames.  This is controlled via a checkbox in the file
	  upload screen.  Hi, Ed!  This feature is for you!  :-)  

	* Added the ability to retain original file names when uploading.  
	  All non-alpha-numeric characters are converted to underscores.
	  This feature is a gallery-admin level config.  If dup names are found
	  during upload, gallery will find a unique name based on the
	  original.  This is feature #429716 from sf.

2001-07-07  John Kirkland <jpk@bl.org>

	* Added a click counter to photos and albums.  This feature
	  uses session cookies to determine if you have viewed a particular
	  album or photo during a given browser session.  If you have not,
	  gallery will increment a click counter and display the results