@@ -1,3 +1,9 @@
+2001-07-12  John Kirkland  <jpk@bl.org>
+	* 2 minor keyword changes per Chris' request (SF#440303):
+	  a.  Put keywords in photo-properties popup
+	  b.  Only show keywords in search if there was a keyword match.
+
+
 2001-07-11  John Kirkland  <jpk@bl.org>
 	* Fixed a bug whereby resetting click counts was timing out for
 	  large albums.  Reported by Ed.
